envoy-config.yaml
static_resources:

  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            stat_prefix: ingress_http
            access_log:
            - name: envoy.access_loggers.stdout
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
            http_filters:
            - name: envoy.filters.http.router
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match:
                    prefix: "/create"
                  route:
                    cluster: pastebean_create_service
                - match:
                    safe_regex:
                      regex: '/[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}'
                      google_re2: {}
                  route:
                    cluster: pastebean_read_service
                - match:
                    safe_regex:
                      regex: '/update/[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}'
                      google_re2: {}
                  route:
                    cluster: pastebean_update_service
                - match:
                    safe_regex:
                      regex: '/delete/[0-9a-fA-F]{8}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{4}\-[0-9a-fA-F]{12}'
                      google_re2: {}
                  route:
                    cluster: pastebean_delete_service

  clusters:
  - name: pastebean_create_service
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: pastebean_create_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: create_service
                port_value: 8080
  - name: pastebean_read_service
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: pastebean_read_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: read_service
                port_value: 8081
  - name: pastebean_update_service
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: pastebean_update_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: update_service
                port_value: 8082
  - name: pastebean_delete_service
    type: STRICT_DNS
    lb_policy: round_robin
    load_assignment:
      cluster_name: pastebean_delete_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: delete_service
                port_value: 8083

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
